--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URI=mongodb+srv://root:juanma4200@cluster0.ehqa6cf.mongodb.net/
-FRONTEND_URL=http://localhost:5173
+MONGO_URI = mongodb+srv://RM92023:Reaver192023.@rmcluster.m6nerof.mongodb.net/Pinvent-app?retryWrites=true&w=majority
+FRONTEND_URL = http://localhost:5173
