--- a/backend/package.json
+++ b/backend/package.json
@@ -2,30 +2,29 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./server.js"
+    "start": "node server.js",
+    "backend": "nodemon server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "cloudinary": "^1.41.0",
+    "cloudinary": "^1.40.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "json-server": "^0.17.4",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.3",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.5"
+    "nodemailer": "^6.9.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
