--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 MONGO_URI = mongodb+srv://RM92023:Reaver192023.@rmcluster.m6nerof.mongodb.net/Pinvent-app?retryWrites=true&w=majority
 
 FRONTEND_URL = http://localhost:5173
+
+JWT_SECRET=cualquier
